--- a/UnKnownsGameREMAKE/.gitignore
+++ b/UnKnownsGameREMAKE/.gitignore
@@ -73,3 +73,8 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+Content/MyContent/
+Content/RecycleBin/
+
+Content/_MyWork/Maps/Test.umap
