Create & Test BP_Ball

--- a/UnKnownsGameREMAKE/.gitignore
+++ b/UnKnownsGameREMAKE/.gitignore
@@ -76,5 +76,6 @@ DerivedDataCache/*
 
 Content/MyContent/
 Content/RecycleBin/
+Source/UnKnownsGameREMAKE/MySource/
 
 Content/_MyWork/Maps/Test.umap
