--- a/UnKnownsGameREMAKE/Config/DefaultEngine.ini
+++ b/UnKnownsGameREMAKE/Config/DefaultEngine.ini
@@ -1,14 +1,26 @@
-[URL]
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_MyWork/Maps/Test.Test
-GameDefaultMap=/Game/_MyWork/Maps/Test.Test
-GlobalDefaultGameMode="/Script/UnKnownsGameREMAKE.UnKnownsGameREMAKEGameMode"
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.Engine]
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Rolling",NewGameName="/Script/UnKnownsGameREMAKE")
++ActiveGameNameRedirects=(OldGameName="TP_Rolling",NewGameName="/Script/UnKnownsGameREMAKE")
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/_MyWork/Maps/Test.Test
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/_MyWork/Maps/Test.Test
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/_MyWork/Extras/BP_GameMode.BP_GameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -50,3 +62,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
