--- a/UnKnownsGameREMAKE/Config/DefaultInput.ini
+++ b/UnKnownsGameREMAKE/Config/DefaultInput.ini
@@ -62,6 +62,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Jump",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Test",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -80,7 +81,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 -AxisMappings=(AxisName="Vertical",Key=MouseY,Scale=1.000000)
--AxisMappings=(AxisName="Horizontal",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="Horizontal",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Down,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftStick_Up,Scale=1.000000)
