--- a/UnKnownsGameREMAKE/Config/DefaultEngine.ini
+++ b/UnKnownsGameREMAKE/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Rolling",NewGameName="/Script/UnKnownsGameREMAKE")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_MyWork/Maps/Test.Test
+EditorStartupMap=/Game/_MyWork/Maps/PlayGround.PlayGround
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -17,7 +17,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/_MyWork/Maps/Test.Test
+GameDefaultMap=/Game/_MyWork/Maps/PlayGround.PlayGround
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/_MyWork/Extras/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
@@ -62,5 +62,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
